--- a/project/Makefile
+++ b/project/Makefile
@@ -12,23 +12,22 @@ AR		= msp430-elf-ar
 all: tune.elf 
 
 #additional rules for files
-tune.elf: ${COMMON_OBJECTS} stateMachine.o led.o buzzer.o wdInterruptHandler.o libTimer.a toyMain.o sr.o
+tune.elf: ${COMMON_OBJECTS} stateMachine.o buzzer.o wdInterruptHandler.o libTimer.a toyMain.o sr.o
 	${CC} ${CFLAGS} ${LDFLAGS} -o $@ $^
 
 load: tune.elf
 	msp430loader.sh tune.elf
+
 sr.o: sr.h sr.s
 
 clean:
 	rm -f *.o *.elf
-
-led.o: led.c led.h
 
 wdInterruptHandler.o: stateMachine.h
 
 libTimer.a: clocksTimer.o sr.o
 	$(AR) crs $@ $^
 
-stateMachine.o: stateMachine.h led.h
+stateMachine.o: stateMachine.h
 
 buzzer.o: buzzer.h libTimer.h
