Finished music playing

--- a/project/Makefile
+++ b/project/Makefile
@@ -12,7 +12,7 @@ AR		= msp430-elf-ar
 all: tune.elf 
 
 #additional rules for files
-tune.elf: ${COMMON_OBJECTS} stateMachine.o buzzer.o led.o music.o musicPlayer.o wdInterruptHandler.o switches.o libTimer.a toyMain.o sr.o p1_interrupt_handler.o
+tune.elf: ${COMMON_OBJECTS} buzzer.o led.o music.o musicPlayer.o wdInterruptHandler.o switches.o libTimer.a toyMain.o sr.o p1_interrupt_handler.o
 	${CC} ${CFLAGS} ${LDFLAGS} -o $@ $^
 
 load: tune.elf
@@ -33,11 +33,9 @@ music.o: music.h music.c musicPlayer.o musicPlayer.c musicPlayer.h
 clean:
 	rm -f *.o *.elf
 
-wdInterruptHandler.o: stateMachine.h wdInterruptHandler.c
+wdInterruptHandler.o: wdInterruptHandler.c
 
 libTimer.a: clocksTimer.o sr.o
 	$(AR) crs $@ $^
-
-stateMachine.o: stateMachine.h
 
 buzzer.o: buzzer.h libTimer.h
